--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "simplebar-react": "3.2.6"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4",
+    "@types/crypto-js": "4.2.2",
     "@types/node": "18.16.19",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
